--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "test": "mocha"
   },
   "dependencies": {
-    "express": "^4.17.1",
+    "chai": "^4.3.6",
+    "express": "^4.17.3",
+    "mocha": "^9.2.2",
     "morgan": "^1.10.0",
-    "uuid": "^3.4.0"
+    "uuid": "^8.3.2"
   },
   "repository": {
     "type": "git",
@@ -26,9 +28,7 @@
   },
   "homepage": "https://github.com/Thinkful-Ed/node-shopping-list-v5#readme",
   "devDependencies": {
-    "chai": "^4.2.0",
-    "chai-http": "^4.3.0",
-    "mocha": "^5.2.0"
+    "chai-http": "^4.3.0"
   },
   "author": ""
 }
